@@ -2262,7 +2262,12 @@ function galleryDocs($class='') {
 	global $gallery;
 
 	if (fs_file_exists(dirname(__FILE__) .'/docs/index.html')) {
-		$url=$gallery->app->photoAlbumURL . '/docs/index.html';
+		if (isset($gallery->app->photoAlbumUrl)) {
+			$url=$gallery->app->photoAlbumURL . '/docs/index.html';
+		}
+		else {  // When first time config without $gallery set.
+			$url='../docs/index.html';
+		}
 		return "<a class=\"$class\" href=\"$url\">[" .  _("documentation").']</a>';
 	}
 	return NULL;
