@@ -1,3 +1,8 @@
+2004-05-06  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b99
+
+        * Fix: Links to docs and diagnostics(!) didnt work with empty config.php
+               ($gallery->app->photoAlbumURL is not set)
+
 2004-05-05  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b98
 
 	* Change: JS shim to make getElementsByTagName() less browser
